crates/kyac/snapshots/kyac__ast__tests__empty.snap
---
source: crates/kyac/src/ast/mod.rs
expression: ast
---
Ast {
    nodes: [
        Function(
            FuncDecl {
                name: Token {
                    kind: Identifier,
                    lexeme: Some(
                        "foo",
                    ),
                    span: Span {
                        line: 1,
                        column: 5,
                        length: 3,
                    },
                },
                params: [],
                ty: Some(
                    Type {
                        base: Token {
                            kind: Identifier,
                            lexeme: Some(
                                "void",
                            ),
                            span: Span {
                                line: 1,
                                column: 12,
                                length: 4,
                            },
                        },
                        params: [],
                    },
                ),
                tp: [],
                body: [],
                external: false,
                id: 0,
            },
        ),
    ],
}
