crates/kyac/snapshots/kyac__ast__tests__hello_world.snap
---
source: crates/kyac/src/ast/mod.rs
expression: ast
---
Ast {
    nodes: [
        Function(
            FuncDecl {
                name: Token {
                    kind: Identifier,
                    lexeme: Some(
                        "main",
                    ),
                    span: Span {
                        line: 1,
                        column: 5,
                        length: 4,
                    },
                },
                params: [],
                ty: None,
                tp: [],
                body: [
                    Expr(
                        Call(
                            Call {
                                left: Ident(
                                    Ident {
                                        name: Token {
                                            kind: Identifier,
                                            lexeme: Some(
                                                "println",
                                            ),
                                            span: Span {
                                                line: 2,
                                                column: 4,
                                                length: 7,
                                            },
                                        },
                                    },
                                ),
                                args: [
                                    Str(
                                        Literal {
                                            value: "\"Hello, world!\"",
                                            token: Token {
                                                kind: Literal,
                                                lexeme: Some(
                                                    "\"Hello, world!\"",
                                                ),
                                                span: Span {
                                                    line: 2,
                                                    column: 12,
                                                    length: 15,
                                                },
                                            },
                                        },
                                    ),
                                ],
                                parens: (
                                    Token {
                                        kind: LeftParen,
                                        lexeme: None,
                                        span: Span {
                                            line: 2,
                                            column: 11,
                                            length: 1,
                                        },
                                    },
                                    Token {
                                        kind: RightParen,
                                        lexeme: None,
                                        span: Span {
                                            line: 2,
                                            column: 27,
                                            length: 1,
                                        },
                                    },
                                ),
                                delimiters: [],
                                id: 0,
                            },
                        ),
                    ),
                ],
                external: false,
                id: 0,
            },
        ),
    ],
}
